<resources>
    <string name="app_name">Messenger</string>
    <string-array name="list_gender">
        <item>Giới tính</item>
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string name="facebook_app_id">129537850103555</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enter_name">Enter name</string>
    <string name="save_changes">Save changes</string>
    <string name="display_name">Display name</string>
    <string name="french">french</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="display_language">Display Language</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="option">Options</string>
    <string name="action_options">Options</string>
    <string name="search_hint">Search by name or email</string>
    <string name="action_right_button">button</string>
    <string name="delete">Delete</string>

</resources>
